--- a/.github/workflows/test-deployed-artifact.yaml
+++ b/.github/workflows/test-deployed-artifact.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Checkout private repository
+        uses: actions/checkout@v4
         with:
           repository: HemalaDev57/register-deployed-artifact-test
           token: ${{ secrets.PAT_TOKEN }}
